@@ -1,16 +1,18 @@
 package com.code.challenge.mapper;
 
 import com.code.challenge.dto.UsuarioDto;
+import com.code.challenge.dto.DepartamentoDto;
 import com.code.challenge.entity.Usuario;
+import com.code.challenge.entity.Departamento;
 import com.code.challenge.repository.DepartamentoRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class UsuarioMapper {
-
 
     private final DepartamentoRepository departamentoRepository;
 
@@ -31,7 +33,7 @@ public class UsuarioMapper {
                 usuario.getTelefone(),
                 usuario.getCpf(),
                 usuario.getEndereco(),
-                usuario.getDepartamento().getDepartamentoId()
+                new DepartamentoDto(usuario.getDepartamento().getDepartamentoId(), usuario.getDepartamento().getNome())
         );
     }
 
@@ -47,15 +49,18 @@ public class UsuarioMapper {
         usuario.setTelefone(dto.telefone());
         usuario.setCpf(dto.cpf());
         usuario.setEndereco(dto.endereco());
-        // Buscar o departamento pelo ID
-        usuario.setDepartamento(departamentoRepository.findById(dto.departamentoId()).orElse(null));
+
+        // Buscar o departamento pelo nome fornecido no DTO
+        Departamento departamento = departamentoRepository.findByNome(dto.departamento().nome())
+                .orElseThrow(() -> new RuntimeException("Departamento não encontrado: " + dto.departamento().nome()));
+        usuario.setDepartamento(departamento);
 
         return usuario;
     }
 
-    public List<UsuarioDto> toDto(List<Usuario> usuarios) {
+    public List<UsuarioDto> toDtoList(List<Usuario> usuarios) {
         return usuarios.stream()
                 .map(this::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
